<resources>
    <string name="app_name">Las Siete Maravillas</string>
    <!-- Login Activity -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="sign_up">Registrarse</string>
    <string name="required_field">Campo obligatorio</string>
    <string name="auth_failure">Error de autenticación: $</string>
    <!-- Main Activity -->
    <string name="main_title">Las Siete Maravillas</string>
    <!-- Detail Activity -->
    <string name="button_quiz">Cuestionario</string>
    <string name="button_travel">Viajar</string>
    <string name="loading_map">Cargando mapa</string>
    <!-- Airport Activity -->
    <string name="airport_title">Aeropuertos cercanos</string>
    <!-- Quiz Activity -->
    <string name="button_answer">Responder</string>
    <string name="answer_invalid">Elija una de las opciones antes de responder</string>
    <string name="right_answer">Correcto!!</string>
    <string name="wrong_answer">Oops…</string>
    <string name="points">Obtiene $ puntos</string>
    <string name="no_points">La respuesta correcta era: "$"</string>
    <string name="completed_quiz">Cuestionario finalizado</string>
    <string name="total_points">La puntuación final es de $</string>
    <string name="congrats">¡Enhorabuena!</string>
    <string name="all_quiz_completed">
        Ha completado todos los cuestionarios relativos a las Siete Maravillas.
        Se almacenará su puntuación en la nube.
    </string>
    <!-- Card holders -->
    <string name="button_detail">Detalle</string>
    <string name="image_view">Foto</string>
    <string name="iata_code">IATA:</string>
    <string name="icao_code">ICAO:</string>
    <string name="distance_to_wonder">Distancia a $:</string>
    <!-- Menu -->
    <string name="menu_help">Ayuda</string>
    <string name="menu_database">Generar datos en Room</string>
    <string name="menu_save">Guardar datos de usuario</string>
    <string name="menu_load">Cargar datos de usuario</string>
    <string name="menu_see">Ver mi puntuación</string>
    <!-- Dialog -->
    <string name="dialog_close">Cerrar</string>
    <string name="dialog_yes">Sí</string>
    <string name="dialog_no">No</string>
    <string name="dialog_save">
        ¿Desea guardar la puntuación actual ($)? Se guardarán también los cuestionarios que haya
        completado hasta el momento.
    </string>
    <string name="dialog_load">
        ¿Desea cargar la puntuación almacenada del usuario actual? Se cargará también el estado en
        que estaban los cuestionarios en el momento del guardado.
    </string>
    <!-- Save/Load user data -->
    <string name="save_completed">La puntuación del usuario fue guardada con éxito.</string>
    <string name="save_canceled">Se canceló la operación de guardado.</string>
    <string name="load_empty">No se encontró ninguna puntuación guardada.</string>
    <string name="load_completed">La puntuación del usuario fue cargada con éxito.</string>
    <string name="load_canceled">Se canceló la operación de carga de datos.</string>
    <!-- Help text -->
    <string name="help_title">¡Descubre la ruta por las Siete Maravillas del mundo moderno!</string>
    <string name="help_text">
        Esta es la lista por excelencia que todo viajero empedernido quiere completar a lo largo de su vida.
        Un conjunto de monumentos histórico-artísticos que han sido elegidos por ciudadanos de todo el
        mundo el pasado 2007 y que suponen un referente en el mundo de los viajes.
        Para comenzar a utilizar la aplicación, cargue en Room la información de las maravillas a través
        de la opción presente en el menú. Seleccionando cualquiera de las maravillas, podrás ver más
        información acerca de cada una de ellas. Con el botón "Viajar" podrás ver los aeropuertos más
        cercanos a cada una de las maravillas. Finalmente, mediante el botón "Cuestionario" podrás responder
        una serie de preguntas acerca de cada uno de estos monumentos. ¡Acierta todas las que puedas en el
        menor tiempo para ganar puntos y liderar la tabla de jugadores!
    </string>
    <!-- User score -->
    <string name="user_score">Puntuación</string>
    <string name="user_detail">
        $ puntos.\n
        Cuestionarios completados:\n
    </string>
</resources>