<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemDatabase"
        android:title="@string/menu_database"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/menuItemSaveUserData"
        android:title="@string/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="2"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/menuItemLoadUserData"
        android:title="@string/menu_load"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="3"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/menuItemSeeUserData"
        android:title="@string/menu_see"
        android:orderInCategory="4"
        />

    <item
        android:id="@+id/menuItemHelp"
        android:title="@string/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="5"
        app:showAsAction="ifRoom|withText"
        />

</menu>